manifests/infrastructure/rustfs/httproute.yaml
# manifests/infrastructure/rustfs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-webui
  namespace: rustfs
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
      kind: Gateway
  hostnames:
    - rustfs.talos.detainedu.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rustfs-svc
          port: 9001
